part 1 graph descriptions added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -287,7 +287,7 @@
 
       <p class="indent">
         $\gdef\units#1{\ \mathrm{#1}}$
-        The above data was gathered by using the video analysis tool in Logger Pro on the recording of the first run (the run with the slower starting speed out of the two runs).
+        The prior data was gathered by using the video analysis tool in Logger Pro on the recording of the first run (the run with the slower starting speed out of the two runs).
         The scale was set using the measured value for $y_0$ ($88.4 \pm 0.2 \units{cm}$).
         The axes were shifted such that the ball started at $x=0$ and landed at $y=0$.
         14 data points (frames) were captured.
@@ -299,7 +299,9 @@
         <figcaption>Run 1—Horizontal Position vs Time</figcaption>
       </figure>
       <p class="indent">
-        $x=(0.648 \pm 0.007 \units{\dfrac{m}{s}})t + (-0.0217 \pm 0.0019 \units{m})$
+        The prior figure plots the horizontal position of the ball over time for Run 1.
+        In accord with equation 1, a linear fit was used.
+        The resulting equation was $x=(0.648 \pm 0.007 \units{\dfrac{m}{s}})t + (-0.0217 \pm 0.0019 \units{m})$.
       </p>
 
       <figure>
@@ -307,7 +309,9 @@
         <figcaption>Run 1—Vertical Position vs Time</figcaption>
       </figure>
       <p class="indent">
-        $y=(-4.28 \pm 0.17 \units{\dfrac{m}{s^2}})t^2 + (0.04 \pm 0.09 \units{\dfrac{m}{s}})t + (0.89 \pm 0.01 \units{m})$
+        The prior figure plots the vertical position of the ball over time for Run 1.
+        In accord with equation 2, a quadratic fit was used.
+        The resulting equation was $y=(-4.28 \pm 0.17 \units{\dfrac{m}{s^2}})t^2 + (0.04 \pm 0.09 \units{\dfrac{m}{s}})t + (0.89 \pm 0.01 \units{m})$.
       </p>
 
       <figure>
@@ -315,8 +319,11 @@
         <figcaption>Run 1—Horizontal Velocity vs Time</figcaption>
       </figure>
       <p class="indent">
-        $v_x=(-0.2 \pm 0.1 \units{\dfrac{m}{s^2}})t + (0.69 \pm 0.03 \units{\dfrac{m}{s}})$
-        $v_x=0.63 \pm 0.6 \units{\dfrac{m}{s}}$
+        The prior figure plots the horizontal velocity of the ball over time for Run 1.
+        In accord with equation 3, the mean (plus or minus a standard deviation) was found to be $v_x=0.63 \pm 0.6 \units{\dfrac{m}{s}}$.
+        Still, the data was quite noisy compared to the expected constant. 
+        There was a slight downward trend, so a linear fit was done as well.
+        The resulting equation was $v_x=(-0.2 \pm 0.1 \units{\dfrac{m}{s^2}})t + (0.69 \pm 0.03 \units{\dfrac{m}{s}})$.
       </p>
 
       <figure>
@@ -324,7 +331,9 @@
         <figcaption>Run 1—Vertical Velocity vs Time</figcaption>
       </figure>
       <p class="indent">
-        $v_y=(-7.6 \pm 0.5 \units{\dfrac{m}{s^2}})t + (-0.11 \pm 0.14 \units{\dfrac{m}{s}})$
+        The prior figure plots the vertical velocity of the ball over time for Run 1.
+        In accord with equation 4, a linear fit was used.
+        The resulting equation was $v_y=(-7.6 \pm 0.5 \units{\dfrac{m}{s^2}})t + (-0.11 \pm 0.14 \units{\dfrac{m}{s}})$.
       </p>
 
       <figure>
@@ -332,7 +341,9 @@
         <figcaption>Run 1—Vertical Position vs Horizontal Position</figcaption>
       </figure>
       <p class="indent">
-        $y=(-11.72 \pm 0.14 \units{\dfrac{1}{m^2}})x^2 + (0.00 \pm 0.04 \units{\dfrac{1}{m}})x + (0.879 \pm 0.002 \units{m})$
+        The prior figure plots the vertical position of the ball versus its horizontal position for Run 1.
+        In accord with equation 5, a quadratic fit was used.
+        The resulting equation was $y=(-11.72 \pm 0.14 \units{\dfrac{1}{m^2}})x^2 + (0.00 \pm 0.04 \units{\dfrac{1}{m}})x + (0.879 \pm 0.002 \units{m})$.
       </p>
       <!-- #endregion slow-ball-graphs -->
 
@@ -459,7 +470,7 @@
       <!-- #endregion fast-ball-table -->
 
       <p class="indent">
-        The above data was gathered by using the video analysis tool in Logger Pro on the recording of the second run (the run with the higher starting speed out of the two runs).
+        The prior data was gathered by using the video analysis tool in Logger Pro on the recording of the second run (the run with the higher starting speed out of the two runs).
         The scale was set using the measured value for $y_0$ ($88.4 \pm 0.2 \units{cm}$).
         The axes were shifted such that the ball started at $x=0$ and landed at $y=0$.
         13 data points (frames) were captured.
@@ -471,7 +482,9 @@
         <figcaption>Run 2—Horizontal Position vs Time</figcaption>
       </figure>
       <p class="indent">
-        $x=(1.066 \pm 0.018 \units{\dfrac{m}{s}})t + (-0.240 \pm 0.008 \units{m})$
+        The prior figure plots the horizontal position of the ball over time for Run 2.
+        In accord with equation 1, a linear fit was used.
+        The resulting equation was $x=(1.066 \pm 0.018 \units{\dfrac{m}{s}})t + (-0.240 \pm 0.008 \units{m})$.
       </p>
 
       <figure>
@@ -479,7 +492,9 @@
         <figcaption>Run 2—Vertical Position vs Time</figcaption>
       </figure>
       <p class="indent">
-        $y=(-4.37 \pm 0.13 \units{\dfrac{m}{s^2}})t^2 + (1.53 \pm 0.12 \units{\dfrac{m}{s}})t + (0.77 \pm 0.02 \units{m})$
+        The prior figure plots the vertical position of the ball over time for Run 2.
+        In accord with equation 2, a quadratic fit was used.
+        The resulting equation was $y=(-4.37 \pm 0.13 \units{\dfrac{m}{s^2}})t^2 + (1.53 \pm 0.12 \units{\dfrac{m}{s}})t + (0.77 \pm 0.02 \units{m})$.
       </p>
 
       <figure>
@@ -487,8 +502,11 @@
         <figcaption>Run 2—Horizontal Velocity vs Time</figcaption>
       </figure>
       <p class="indent">
-        $v_x=(-0.87 \pm 0.11 \units{\dfrac{m}{s^2}})t + (1.43 \pm 0.05 \units{\dfrac{m}{s}})$
-        $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m^2}})x^2 + (0.01 \pm 0.03 \units{\dfrac{1}{m}})x + (0.879 \pm 0.003 \units{m})$
+        The prior figure plots the horizontal velocity of the ball over time for Run 2.
+        In accord with equation 3, the mean (plus or minus a standard deviation) was found to be $v_x=1.05 \pm 0.12 \units{\dfrac{m}{s}}$.
+        Still, the data was quite noisy compared to the expected constant. 
+        There was a slight downward trend, so a linear fit was done as well.
+        The resulting equation was $v_x=(-0.87 \pm 0.11 \units{\dfrac{m}{s^2}})t + (1.43 \pm 0.05 \units{\dfrac{m}{s}})$.
       </p>
 
       <figure>
@@ -497,7 +515,9 @@
         <figcaption>Run 2—Vertical Velocity vs Time</figcaption>
       </figure>
       <p class="indent">
-        $v_x=(-0.87 \pm 0.11 \units{\dfrac{m}{s^2}})t + (1.43 \pm 0.05 \units{\dfrac{m}{s}})$
+        The prior figure plots the vertical velocity of the ball over time for Run 2.
+        In accord with equation 4, a linear fit was used.
+        The resulting equation was $v_y=(-8.1 \pm 0.3 \units{\dfrac{m}{s^2}})t + (1.30 \pm 0.14 \units{\dfrac{m}{s}})$.
       </p>
 
       <figure>
@@ -505,7 +525,9 @@
         <figcaption>Run 2—Vertical Position vs Horizontal Position</figcaption>
       </figure>
       <p class="indent">
-        $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m^2}})x^2 + (0.01 \pm 0.03 \units{\dfrac{1}{m}})x + (0.879 \pm 0.003 \units{m})$
+        The prior figure plots the vertical position of the ball versus its horizontal position for Run 2.
+        In accord with equation 5, a quadratic fit was used.
+        The resulting equation was $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m^2}})x^2 + (0.01 \pm 0.03 \units{\dfrac{1}{m}})x + (0.879 \pm 0.003 \units{m})$.
       </p>
 
       <!-- #endregion fast-ball-graphs -->
