angled distance data inserted

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -602,6 +602,61 @@
         This was found by doubling the coefficient for $t^2$ in the curve fit equations for vertical position versus time (in accord with equation 2).
       </p>
 
+      <h3>Part 2</h3>
+      <!-- #region angled-distance-table -->
+      <table>
+        <caption>Angled Distance Along the Board ($d$) Data</caption>
+        <thead>
+          <tr>
+            <th>Trial</th>
+            <th>$d$ (cm)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>87.95</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>87.75</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>87.50</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>87.80</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>88.09</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>87.00</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>84.70</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>86.80</td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>87.00</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>87.10</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- #endregion angled-distance-table -->
+
     </section>
 
     <section id="conclusion">
