--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -603,9 +603,43 @@
       </p>
 
       <h3>Part 2</h3>
+      <!-- #region horizontal-distance-table -->
+      <table>
+        <caption>Horizontal Distance Measurements ($R$)</caption>
+        <thead>
+          <tr>
+            <th>Trial</th>
+            <th>$R$ (cm)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>70.00</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>70.11</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>70.05</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>69.95</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>70.00</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- #endregion horizontal-distance-table -->
+
       <!-- #region angled-distance-table -->
       <table>
-        <caption>Angled Distance Along the Board ($d$) Data</caption>
+        <caption>Angled Distance Measurements ($d$)</caption>
         <thead>
           <tr>
             <th>Trial</th>
