initial height added to table

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -543,6 +543,10 @@
         </thead>
         <tbody>
           <tr>
+            <th>$y_0$ (cm)</th>
+            <td colspan="2">88.4 ± 0.2</td>
+          </tr>
+          <tr>
             <th>$v_{0x}$ (m/s)</th>
             <td>0.582</td>
             <td>1.115</td>
