--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -642,7 +642,7 @@
       <!-- #endregion horizontal-distance-table -->
 
       <p class="indent">
-        The above table contains the measurements made of $R$ (see Figure 2) made in the five trials. 
+        The above table contains the measurements of $R$ (see Figure 2) made in the five trials. 
         The average value for $R$ was 70.022 cm. 
         The uncertainty of each measurement was taken to be due to read error (± 0.05 cm, half the smallest increment on the meter stick) and calibration error (0.2% of the average value), as these are common rules of thumb for approximating uncertainty.
         Below are the calculations of the uncertainty for the $R$ measurements.
