--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -643,7 +643,7 @@
 
       <p class="indent">
         The above table contains the measurements of $R$ (see Figure 2) made in the five trials. 
-        The average value for $R$ was 70.022 cm. 
+        The average value for $R$ was 70.022 cm (or 0.70022 m). 
         The uncertainty of each measurement was taken to be due to read error (± 0.05 cm, half the smallest increment on the meter stick) and calibration error (0.2% of the average value), as these are common rules of thumb for approximating uncertainty.
         Below are the calculations of the uncertainty for the $R$ measurements.
       </p>
