missing partial derivative inserted

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -657,6 +657,7 @@
       </p>
       <p>
         $R_{av} = \frac{1}{N} \sum\limits_{i=1}^{N}R_i$<br>
+        $\del{R_{av}}{R_i} = \dfrac{1}{N}$<br>
         $\Delta R_{av} = (\sum\limits_{i=1}^{N}(\frac{1}{N} \Delta R)^2 )^\frac{1}{2}$<br>
         $\Delta R_{av} = \dfrac{\Delta R}{\sqrt{N}}$<br>
         $\Delta R_{av} = \dfrac{(0.15 \units{cm})}{\sqrt{5}}$<br>
