d table description added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -287,6 +287,7 @@
 
       <p class="indent">
         $\gdef\units#1{\ \mathrm{#1}}$
+        $\gdef\del#1#2{\dfrac{\partial #1}{\partial #2}}$
         The prior data was gathered by using the video analysis tool in Logger Pro on the recording of the first run (the run with the slower starting speed out of the two runs).
         The scale was set using the measured value for $y_0$ ($88.4 \pm 0.2 \units{cm}$).
         The axes were shifted such that the ball started at $x=0$ and landed at $y=0$.
