part 2 data summary added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -783,6 +783,63 @@
         $\Delta d_{av} = \dfrac{(0.18 \units{cm})}{\sqrt{10}}$<br>
         $\Delta d_{av} = 0.06 \units{cm}$
       </p>
+      
+      <table>
+        <caption>Part 2 Data Summary</caption>
+        <thead>
+          <tr>
+            <th>Quantity</th>
+            <th>Value</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>$y_0$ (cm)</th>
+            <td>93.7 ± 0.2</td>
+          </tr>
+          <tr>
+            <th>$\theta$ (°)</th>
+            <td>49.0 ± 0.5</td>
+          </tr>
+          <tr>
+            <th>$R$ (cm)</th>
+            <td>70.02 ± 0.07</td>
+          </tr>
+          <tr>
+            <th>$v_0$ (m/s)</th>
+            <td>1.602 ± 0.002</td>
+          </tr>
+          <tr>
+            <th>$d_p$ (predicted) (cm)</th>
+            <td>92 ± 3</td>
+          </tr>
+          <tr>
+            <th>$d_m$ (measured) (cm)</th>
+            <td>87.17 ± 0.06</td>
+          </tr>
+          <tr>
+            <th>$D = d_p - d_m$ (cm)</th>
+            <td>5 ± 3</td>
+          </tr>
+        </tbody>
+      </table>
+      
+      <p class="indent">
+        The prior table summarizes the key measurements and calculations of Part 2.
+        This includes the measured value for $y_0$, the measured value for $\theta$, the average measured value for $R$, the calculated value for $v_0$, the calculated/predicted value for $d$ (labeled $d_p$), the average measured value for $d$ (labeled $d_m$), and the difference between $d_p$ and $d_m$ (labeled $D$).
+        The calculation of that difference $D$, along with its uncertainty, is shown below.
+      </p>
+      <p>
+        $D = d_p - d_m$<br>
+        $D = (92 \units{cm}) - (87.17 \units{cm})$<br>
+        $D = 5 \units{cm}$<br>
+      </p>
+      <hr>
+      <p>
+        $\Delta D = \sqrt{\Delta d_p^2 + \Delta d_m^2}$<br>
+        $\Delta D = \sqrt{(3 \units{cm})^2 + (0.06 \units{cm})^2}$<br>
+        $\Delta D = 3 \units{cm}$<br>
+      </p>
 
     </section>
 
