Part 1 conclusion added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -845,8 +845,41 @@
 
     <section id="conclusion">
       <h2>Conclusion</h2>
+      
+      <h3>Part 1</h3>
+      <p class="indent">
+        In Part 1, a steel ball bearing was recorded rolling horizontally off of a table and onto the ground.
+        This was done for two runs in which the ball had a noticeably different starting speed.
+        Comparing the data between the two runs seems to support certain qualities of the motion of projectiles projected horizontally.
+        To start, equation 1 suggests that the horizontal distance traveled by the ball is proportional to the initial horizontal velocity.
+        Looking at the $v_{0x}$ and $R$ data in table 3, the ball in Run 2 had about double the initial horizontal velocity of Run 1 ($(1.115 \units{m/s})/(0.582 \units{m/s}) = 1.9 \approx 2$), and subsequently traveled about double the horizontal distance ($(0.4217 \units{m})/(0.2732 \units{m}) = 1.5 \approx 2$).
+        Thus, the data seems to support this property described by equation 1.
+        Next, equation 2 suggests that the time to reach the ground is independent of initial velocity.
+        Despite both runs having noticeably different initial velocities, both took about the same amount of time to reach the ground (0.43 ± 0.03 s for Run 1, and 0.40 ± 0.03 s for Run 2; values from table 3).
+        Since these time values lie within each other's uncertainty, the data is consistent with the notion that projectiles launched horizontally should take the same amount of time to reach the ground, regardless of initial velocity.
+        Lastly, equation 2 suggests that the acceleration of the ball in the air is independent of initial velocity.
+        Despite both runs having noticeably different initial velocities, both had about the same vertical acceleration (-8.6 ± 0.3 m/s^2 for Run 1, and -8.7 ± 0.3 m/s^2 for Run 2; values from table 3).
+        Since these acceleration values lie within each other's uncertainty, the data is consistent with the notion that projectiles launched horizontally should have the same acceleration, regardless of initial velocity.
+      </p>
+      <p class="indent">
+        However, it should be noted that the acceleration values in both runs, while consistent with each other, are not consistent with the accepted value of 9.81 m/s^2.
+        It is possible that the recording was not aligned perpendicular to the ball's plane of motion, as was intended.
+        Since the cell phone was help by a human and only estimated to be aligned properly, it would have been easy for the recording to have been done at a slightly slanted perspective.
+        This would have reduced the measured distance values compared to their actual values, thereby reducing the calculated acceleration.
+        In the future, this source of error might be mitigated by supporting the cell phone (or some other camera) on a stable stand with a level.
+        This would allow the experimenters to ensure that the camera is aligned properly before recording the motion of the ball.
+        Another potential cause of this are the effects of air resistance.
+        Air resistance would have hindered the ball's motion, causing it to accelerate more slowly in the downward direction.
+        This explanation would also be consistent with the slight downward trend seen in the horizontal velocity versus time graphs for both runs (figures 5 & 10).
+        In the future, this source of error might be reduced by using a ball with a greater density.
+        Its greater mass and lower cross-sectional area would make it less susceptible to the effects of air resistance.
+        Alternatively, if the budget allows, the experiment might be performed in a vacuum chamber where there is very little air to impede the ball's motion.
+      </p>
+
+      <h3>Part 2</h3>
       <p class="indent">
       </p>
+
     </section>
   </main>
 </body>
