--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -700,8 +700,8 @@
       </p>
       <hr>
       <p>
-        $\Delta d = sqrt{(\del{d}{v_0} \Delta v_0)^2 + (\del{d}{\theta} \Delta \theta)^2}$<br>
-        $\Delta d = sqrt{(\dfrac{4v_0\tan(\theta)}{g\cos(\theta)} \Delta v_0)^2 + (\dfrac{2v_0^2(1 + \sin^2(\theta))}{g\cos^3(\theta)} \Delta \theta)^2}$<br>
+        $\Delta d = \sqrt{(\del{d}{v_0} \Delta v_0)^2 + (\del{d}{\theta} \Delta \theta)^2}$<br>
+        $\Delta d = \sqrt{(\dfrac{4v_0\tan(\theta)}{g\cos(\theta)} \Delta v_0)^2 + (\dfrac{2v_0^2(1 + \sin^2(\theta))}{g\cos^3(\theta)} \Delta \theta)^2}$<br>
         $\Delta d = [(\dfrac{4(1.602 \units{m/s})\tan(49.0°)}{g\cos(49.0°)} (0.002 \units{m}{s}))^2 + (\dfrac{2(1.602 \units{m/s})^2(1 + \sin^2(49.0°))}{(9.81 \units{m/s^2})\cos^3(49.0°)} (0.5° \cdot \dfrac{\pi}{180°}))^2]^{\frac{1}{2}}$<br>
         $\Delta d = 0.03 \units{m}$<br>
         $\Delta d = 3 \units{cm}$
