part 2 conclusion added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -878,6 +878,27 @@
 
       <h3>Part 2</h3>
       <p class="indent">
+        In Part 2, a steel ball bearing was rolled horizontally off of a table and onto an angled wooden board.
+        Before this though, the ball was rolled off the table and onto the ground so that the initial speed of the ball might be determined.
+        With that calculated initial velocity, where the ball would land on the angled board could be predicted.
+        From table 6, the ball was predicted to land at $d=92 \pm 3 \units{cm}$, but it was measured to land on average at $d=87.17 \pm 0.06 \units{cm}$ (see figure 2 for what distance $d$ represents).
+        The difference between these values is $D = 5 \pm 3 \units{cm}$ (value from table 6).
+        Since this difference does not include the value zero, the values are not consistent.
+        In other words, the measured value for $d$ does not agree with the predicted value.
+        While it might at first seem that the kinematic equations described at the outset are inaccurate, it is more likely that some other factors are at play.
+      </p>
+      <p class="indent">
+        One source of error likely comes from the effects of air resistance. 
+        Air resistance would have impeded the motion of the ball, preventing it from traveling the full distance predicted.
+        In the future, this source of error might be reduced by using a ball with a greater density.
+        Its greater mass and lower cross-sectional area would make it less susceptible to the effects of air resistance.
+        Alternatively, if the budget allows, the experiment might be performed in a vacuum chamber where there is very little air to impede the ball's motion.
+        Another potential source of error comes from the fact that the board might have changed angle over the course of the experiment.
+        The board was not very well secured; normal force and friction between the board and the ground, a contact force between the board and the table, and its weight were all that kept it in place.
+        It is possible that repeated collisions between the ball and board, along with measurements of $d$ with the meter stick pressed against the board, might have caused the board to slip and $\theta$ to decrease, unbeknownst to the experimenters. 
+        Increasing the uncertainty of $\theta$ from 0.5° to 1° increases the uncertainty of $d_p$ from 3 cm to 5 cm, and thereby the uncertainty of $D$ from 3 cm to 5 cm.
+        This adjustment in the uncertainty would make the predicted and measured values for $d$ compatible.
+        Thus, it seems reasonable to conclude that the initial approximation for the uncertainty of $\theta$ (0.5°, half the smallest increment), was too low and that 1.0° is a more realistic value for the uncertainty.
       </p>
 
     </section>
