--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -344,7 +344,7 @@
       <p class="indent">
         The prior figure plots the vertical position of the ball versus its horizontal position for Run 1.
         In accord with equation 5, a quadratic fit was used.
-        The resulting equation was $y=(-11.72 \pm 0.14 \units{\dfrac{1}{m^2}})x^2 + (0.00 \pm 0.04 \units{\dfrac{1}{m}})x + (0.879 \pm 0.002 \units{m})$.
+        The resulting equation was $y=(-11.72 \pm 0.14 \units{\dfrac{1}{m}})x^2 + (0.00 \pm 0.04)x + (0.879 \pm 0.002 \units{m})$.
       </p>
       <!-- #endregion slow-ball-graphs -->
 
@@ -528,7 +528,7 @@
       <p class="indent">
         The prior figure plots the vertical position of the ball versus its horizontal position for Run 2.
         In accord with equation 5, a quadratic fit was used.
-        The resulting equation was $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m^2}})x^2 + (0.01 \pm 0.03 \units{\dfrac{1}{m}})x + (0.879 \pm 0.003 \units{m})$.
+        The resulting equation was $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m}})x^2 + (0.01 \pm 0.03)x + (0.879 \pm 0.003 \units{m})$.
       </p>
 
       <!-- #endregion fast-ball-graphs -->
