hanging mass acceleration data table added

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -71,11 +71,54 @@
     <section id="results">
       <h2>Results</h2>
 
+      <!-- #region hanging-mass-acceleration-table -->
+      <table>
+        <caption>Hanging Mass &amp; Acceleration Data</caption>
+        <thead>
+          <tr>
+            <th>$m_h$ (g)</th>
+            <th>$a_{up}$ (m/s^2)</th>
+            <th>$a_{down}$ (m/s^2)</th>
+            <th>$a_{avg}$ (m/s^2)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>5</td>
+            <td>0.1718</td>
+            <td>0.0823</td>
+            <td>0.1270</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>0.2977</td>
+            <td>0.2075</td>
+            <td>0.2526</td>
+          </tr>
+          <tr>
+            <td>15</td>
+            <td>0.4189</td>
+            <td>0.3426</td>
+            <td>0.3808</td>
+          </tr>
+          <tr>
+            <td>20</td>
+            <td>0.5504</td>
+            <td>0.4611</td>
+            <td>0.5058</td>
+          </tr>
+          <tr>
+            <td>25</td>
+            <td>0.6774</td>
+            <td>0.5852</td>
+            <td>0.6313</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- #endregion hanging-mass-acceleration-table -->
+
       <!-- #region some-graph -->
       <!-- #endregion some-graph -->
-
-      <!-- #region some-table -->
-      <!-- #endregion some-table -->
 
     </section>
 
