graph inserted in report

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -117,8 +117,12 @@
       </table>
       <!-- #endregion hanging-mass-acceleration-table -->
 
-      <!-- #region some-graph -->
-      <!-- #endregion some-graph -->
+      <!-- #region hanging-mass-acceleration-graph -->
+      <figure>
+        <img src="media/hanging-mass-acceleration-graph.png">
+        <figcaption>Average Acceleration ($a_{avg}$) versus Hanging Mass ($m_h$)</figcaption>
+      </figure>
+      <!-- #endregion hanging-mass-acceleration-graph -->
 
     </section>
 
