word changed in objective

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -49,7 +49,7 @@
     <p class="title-page">
       <strong>Objective</strong>
       <br>
-      The goal of this experiment is to verify Newton's second law of motion, specifically the aspect that states the acceleration of a system is proportional to the net force acting on the system.
+      The goal of this experiment is to verify Newton's second law of motion, specifically the aspect which states the acceleration of a system is proportional to the net force acting on the system.
     </p>
   </header>
   <main>
