--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -57,7 +57,24 @@
     <section id="theory">
       <h2>Theory</h2>
       <p class="indent">
-        
+        Newton's second law can take the following equation form, where $\Sigma \vec F$ is the vector sum of the forces acting on a system, commonly referred to as $\vec F{net}$, and $\vec a$ is the acceleration of the system.
+        $$\Sigma \vec F = m \vec a \tag{1}$$
+        This implies that the magnitude of the acceleration of a system is proportional to the magnitude of the net force on the system.
+        Creating a free body diagram (FBD) for the system examined in this experiment (hanging mass + cart, see figure 1) and applying Newton's second law to it yields the following expression for acceleration (assuming negligible friction) where $a$ is the acceleration of the system, $m_h$ is the hanging mass (plus any slotted masses attached), and $M_c$ is the mass of the cart (plus any slotted masses attached)
+        $$a = \dfrac{m_h g}{M_c + m_h} \tag{2}$$
+      </p>
+      <p class="indent">
+        If it were instead assumed that there were some kind of constant frictional force ($f$) acting opposite the motion of the cart, then the expression for the acceleration of the system while the hanging mass is moving up ($a_{up}$) becomes
+        $$a_{up} = \dfrac{m_h g + f}{M_c + m_h} \tag{3}$$
+        and the expression for the acceleration of the system while the hanging mass is moving down ($a_{down}$) becomes
+        $$a_{down} = \dfrac{m_h g - f}{M_c + m_h} \tag{4}$$
+        both directed down for the hanging mass and towards the pulley for the cart. 
+      </p>
+      <p class="indent">
+        Interestingly, it can be shown algebraically that the average ($a_{avg}$) of the two accelerations, $a_{up}$ and $a_{down}$, equals the acceleration ($a$) found by assuming there was no friction.
+        In equation form, this relationship looks like the following.
+        $$a = a_{avg} = \frac{1}{2} (a_{up} + a_{down}) \tag{5}$$
+        Thus, by using $a_{avg}$ for the analysis instead of just $a_{up}$ or $a_{down}$, the impact of friction can be negated and the system can be examined as if there were negligible friction.
       </p>
     </section>
 
