unhelpful figure reference removed

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -60,7 +60,7 @@
         Newton's second law can take the following equation form, where $\Sigma \vec F$ is the vector sum of the forces acting on a system, commonly referred to as $\vec F{net}$, and $\vec a$ is the acceleration of the system.
         $$\Sigma \vec F = m \vec a \tag{1}$$
         This implies that the magnitude of the acceleration of a system is proportional to the magnitude of the net force on the system.
-        Creating a free body diagram (FBD) for the system examined in this experiment (hanging mass + cart, see figure 1) and applying Newton's second law to it yields the following expression for acceleration (assuming negligible friction) where $a$ is the acceleration of the system, $m_h$ is the hanging mass (plus any slotted masses attached), and $M_c$ is the mass of the cart (plus any slotted masses attached)
+        Creating a free body diagram (FBD) for the system examined in this experiment (hanging mass + cart) and applying Newton's second law to it yields the following expression for acceleration (assuming negligible friction) where $a$ is the acceleration of the system, $m_h$ is the hanging mass (plus any slotted masses attached), and $M_c$ is the mass of the cart (plus any slotted masses attached)
         $$a = \dfrac{m_h g}{M_c + m_h} \tag{2}$$
       </p>
       <p class="indent">
