method section added

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -81,8 +81,29 @@
     <section id="method">
       <h2>Method</h2>
       <p class="indent">
-        
+        See Figure 1 for a diagram of the setup used.
+        A motion encoder track was set on the table.
+        Care was taken to make sure the track was level so that tension in the string would be the only unbalanced force acting on the cart.
+        A motion encoder receiver was attached to one end of the track and connected through a LabQuest Mini to a computer.
+        This would allow the cart's motion data to be recorded and analyzed at multiple points in the experiment.
+        At the opposite end of the track a pulley was attached with a bumper just before it to prevent the cart from colliding with the pulley.
+        5 slotted masses, each with a mass of 5 g, were attached to the cart with a piece of tape.
+        The tape was used to secure the slotted masses on the cart and prevent them from moving, which could have impacted the measured acceleration.
+        A string was also tied to the cart and connected to a 5 g mass hanger.
+        The total mass of this system of objects was measured using a balance.
+        The cart was then returned to the track with the string running over the pulley and the hanger going off the edge of the table.
       </p>
+      <p class="indent">
+        For each trial, the cart was given a slight, quick nudge in the direction away from the pulley with the motion encoder set to record this motion.
+        The graph of velocity versus time produced was linear fit for a section where the cart was moving away from the pulley, the slope corresponding to $a_{up}$, followed by a linear fit for a section where the cart was moving towards the pulley, the slope corresponding to $a_{down}$.
+        Care was taken to not include in the linear fit the time of the human push nor the time of the collision with the bumper, as the forces involved in those interactions would have undesirably impacted the acceleration.
+        Between trials, a slotted mass was transferred from the cart to the mass hanger for a total of 5 trials.
+        This kept the system mass constant while increasing the hanging mass.
+      </p>
+      <figure>
+        <img src="media/experiment-setup-diagram.png">
+        <figcaption>Experiment Setup</figcaption>
+      </figure>
     </section>
 
     <section id="results">
