units macro added

--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -24,6 +24,9 @@
             { left: '$', right: '$', display: false },
           ],
           throwOnError: false,
+          macros: {
+            "\\units": "\\ \\mathrm{#1}"
+          }
         });
       }
     }
