--- a/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
+++ b/reports/newtons-second-law-lab/newtons-second-law-lab-report.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <title>Newton's Second Law Lab</title>
   <link rel="stylesheet" href="../rendering/general-report-styles.css">
 
   <!-- Katex equation rendering & Paged JS -->
